# gpt_mobile

./: .gitmodules  README.md
app/: build.gradle.kts
app/src/main/: .gitignore  AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  powerserve.cpp
app/src/main/kotlin/dev/chungjungsoo/gptmobile/data/: ModelConstants.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/data/datastore/: SettingDataSource.kt  SettingDataSourceImpl.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/data/dto/: Platform.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/data/model/: ApiType.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/data/repository/: ChatRepository.kt  ChatRepositoryImpl.kt  SettingRepositoryImpl.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/data/server/: ModelDownloader.kt  PowerServeServer.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/presentation/common/: NavigationGraph.kt  Route.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/presentation/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/presentation/ui/home/: HomeScreen.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/presentation/ui/main/: MainActivity.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/presentation/ui/setting/: PlatformSettingDialogs.kt  PlatformSettingScreen.kt  SettingViewModel.kt
app/src/main/kotlin/dev/chungjungsoo/gptmobile/util/: MapStringResources.kt
app/src/main/res/drawable/: ic_recycle.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
(+3 files in other folders)
